--- a/code-along.css
+++ b/code-along.css
@@ -30,7 +30,7 @@
 }
 
 /****************************************
-* Animation
+* Animationddddd
 ****************************************/
 
 .bar {
